syntax = "proto3";
package rpc;
service Cache {
  rpc Store(StoreReq) returns (StoreResp) {}
  rpc Get(GetReq) returns (GetResp) {}
}
message StoreReq {
  string key = 1;
  bytes val = 2;
}
message StoreResp {
}
message GetReq {
  string key = 1;
}
message GetResp {
  bytes val = 1;
}
service AccountService {
	rpc Create(Account) returns (Account) {}
	rpc Get(Account) returns (Account) {}
	rpc Authenticate(Account) returns (AuthenticateAccountResp) {}
}
message Account {
	string username = 1;
	string accountID = 2;
	string password = 3;
}
message AuthenticateAccountResp{
	bool loggedIn = 1;
}

